--- a/java/Starting-out-with-java-Tony-Gaddis-6th-edition/README
+++ b/java/Starting-out-with-java-Tony-Gaddis-6th-edition/README
@@ -1,5 +1,5 @@
 In chapterNUM file are usually answers till programming challenges, which are in "test" files.
-You can run the code manipulating with comment marks to extract the precise exercise.
+You can run the code manipulating the comment marks to extract the precise exercise.
 The rest of files are classes used in exercises.
 
-All the code is written by me and it's not perfect - feel free to contribute!
+All the code is written by me.
